--- a/web/bower.json
+++ b/web/bower.json
@@ -6,7 +6,8 @@
     "handlebars": "1.2.1",
     "ember-data": "1.0.0-beta.7",
     "bootstrap-sass-official": "3.1.1",
-    "cryptojslib": ""
+    "cryptojslib": "3.1.2",
+    "d3": "3.4.11"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
